<resources>
    <string name="app_name">GoTaxi</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="number">Phone Number</string>
    <string name="enter_number">Enter Your Phone Number</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Your Address</string>
    <string name="submit">SUBMIT</string>
    <string name="client_details">Details of Client</string>
    <string name="send_details">Send Details via</string>
    <string name="msg_sent">Details Sent. Taxi will come to your address in 10minutes from your booking time.</string>
    <string name="welcome">Welcome to GoTaxi</string>
    <string name="time">Time of Booking</string>
</resources>
